Completed color blocks container CSS

--- a/index.html
+++ b/index.html
@@ -22,18 +22,42 @@
         <div class="form">
           <form action="#">
             <select name="languages" id="lang">
-              <option value="javascript">JavaScript</option>
-              <option value="php">PHP</option>
-              <option value="java">Java</option>
-              <option value="golang">Golang</option>
-              <option value="python">Python</option>
-              <option value="c#">C#</option>
-              <option value="C++">C++</option>
-              <option value="erlang">Erlang</option>
+              <option value="monochrome">Monochrome</option>
+              <option value="monochrome-dark">Monochrome-dark</option>
+              <option value="monochrome-light">Monochrome-light</option>
+              <option value="analogic">Analogic</option>
+              <option value="complement">Complement</option>
+              <option value="analogic-complement">Analogic-complement</option>
+              <option value="triad">Triad</option>
+              <option value="quad">Quad</option>
             </select>
             <input type="submit" value="Get Color Scheme" />
           </form>
         </div>
+      </section>
+      <section class="color-blocks-container">
+      
+        <div class="color-block">
+            <div class="one"></div>
+            <p>#f55a5a</p>
+        </div>
+        <div class="color-block">
+            <div class="two"></div>
+            <p>#2b283a</p>
+        </div>
+        <div class="color-block">
+            <div class="three"></div>
+            <p>#fbf3ab</p>
+        </div>
+        <div class="color-block">
+            <div class="four"></div>
+            <p>#AAD1B6</p>
+        </div>
+        <div class="color-block">
+            <div class="five"></div>
+            <p>#A626D3</p>
+        </div>
+
       </section>
     </div>
     <script src="index.js"></script>
