Got api hex colors to return back

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
               <option value="triad">Triad</option>
               <option value="quad">Quad</option>
             </select>
-            <input type="submit" value="Get Color Scheme" />
+            <input type="submit" value="Get Color Scheme"  id="color-btn"/>
           </form>
         </div>
       </section>
@@ -39,23 +39,23 @@
       
         <div class="color-block">
             <div class="one"></div>
-            <p>#f55a5a</p>
+            <p class="para">#f55a5a</p>
         </div>
         <div class="color-block">
             <div class="two"></div>
-            <p>#2b283a</p>
+            <p class="para">#2b283a</p>
         </div>
         <div class="color-block">
             <div class="three"></div>
-            <p>#fbf3ab</p>
+            <p class="para">#fbf3ab</p>
         </div>
         <div class="color-block">
             <div class="four"></div>
-            <p>#AAD1B6</p>
+            <p class="para">#AAD1B6</p>
         </div>
         <div class="color-block">
             <div class="five"></div>
-            <p>#A626D3</p>
+            <p class="para">#A626D3</p>
         </div>
 
       </section>
