Get colorScheme completed

--- a/index.html
+++ b/index.html
@@ -38,23 +38,23 @@
       <section class="color-blocks-container">
       
         <div class="color-block">
-            <div class="one"></div>
+            <div class="rectangle one"></div>
             <p class="para">#f55a5a</p>
         </div>
         <div class="color-block">
-            <div class="two"></div>
+            <div class="rectangle two"></div>
             <p class="para">#2b283a</p>
         </div>
         <div class="color-block">
-            <div class="three"></div>
+            <div class="rectangle three"></div>
             <p class="para">#fbf3ab</p>
         </div>
         <div class="color-block">
-            <div class="four"></div>
+            <div class="rectangle four"></div>
             <p class="para">#AAD1B6</p>
         </div>
         <div class="color-block">
-            <div class="five"></div>
+            <div class="rectangle five"></div>
             <p class="para">#A626D3</p>
         </div>
 
