mobile first css & minor html changes

--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
 <body>
   <header>
     <section>
-      <img src="colour.png" alt="ColorBlendr" />
+      <div class="img-wrapper">
+        <img src="icons8-color-64.png" alt="colorblendr" />
+      </div>
       <h1>ColorBlendr</h1>
     </section>
   </header>
@@ -28,16 +30,16 @@
         <div class="form">
           <form action="#">
             <select name="languages" id="lang">
-              <option value="monochrome">Monochrome</option>
-              <option value="monochrome-dark">Monochrome-dark</option>
-              <option value="monochrome-light">Monochrome-light</option>
-              <option value="analogic">Analogic</option>
-              <option value="complement">Complement</option>
-              <option value="analogic-complement">Analogic-complement</option>
-              <option value="triad">Triad</option>
-              <option value="quad">Quad</option>
+              <option value="monochrome">monochrome</option>
+              <option value="monochrome-dark">monochrome-dark</option>
+              <option value="monochrome-light">monochrome-light</option>
+              <option value="analogic">analogic</option>
+              <option value="complement">complement</option>
+              <option value="analogic-complement">analogic-complement</option>
+              <option value="triad">triad</option>
+              <option value="quad">quad</option>
             </select>
-            <input type="submit" value="Get Color Scheme" id="color-btn" />
+            <input type="submit" value="get color scheme" id="color-btn" />
           </form>
         </div>
       </section>
@@ -56,11 +58,11 @@
         </div>
         <div class="color-block">
           <div class="rectangle four"></div>
-          <p class="para">#AAD1B6</p>
+          <p class="para">#aad1b6</p>
         </div>
         <div class="color-block">
           <div class="rectangle five"></div>
-          <p class="para">#A626D3</p>
+          <p class="para">#a626d3</p>
         </div>
       </section>
     </div>
